force-app/main/default/objects/bear_Student_Task_Junction__c/bear_Student_Task_Junction__c.object-meta.xml
<CustomObject>
    <label>Student Task Junction</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Student Task Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Task Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>