force-app/main/default/objects/bear_Student_Task_Junction__c/fields/bear_Contact__c.field-meta.xml
<CustomField>
    <fullName>bear_Contact__c</fullName>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.bear_Bear_Role__c</field>
            <operation>equals</operation>
            <value>Student</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Task Junctions</relationshipLabel>
    <relationshipName>Student_Task_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>