force-app/main/default/objects/bear_Student_Task_Junction__c/fields/bear_Mark__c.field-meta.xml
<CustomField>
    <fullName>bear_Mark__c</fullName>
    <label>Mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>