force-app/main/default/objects/bear_Student_Task_Junction__c/fields/bear_Mark_Types__c.field-meta.xml
<CustomField>
    <fullName>bear_Mark_Types__c</fullName>
    <label>Mark Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
                <default>true</default>
                <label>Number</label>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>