force-app/main/default/objects/bear_Student_Task_Junction__c/fields/bear_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>bear_Task_Id__c</fullName>
    <description>Lookup to Task</description>
    <label>Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>