force-app/main/default/objects/bear_Student_Task_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>bear_Contact__c</columns>
    <columns>bear_Task_Id__c</columns>
    <columns>bear_Mark_Types__c</columns>
    <columns>bear_Mark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>